Fix truncating page links

--- a/src/notion-enhancer-tweaks.styl
+++ b/src/notion-enhancer-tweaks.styl
@@ -78,7 +78,8 @@ text_dark = rgba(255,255,255,.9)
 
 /* truncate page links */
 .notion-page-mention-token
-	max-width 10em
+	max-width 18em
+	display inline-block
 	overflow hidden
 	white-space nowrap
 	text-overflow ellipsis
